# lacerta

./: README.md  deploy.sh  setup.cfg
notebooks/: 2023-02-25-interactive-scattermatrix.ipynb  heatmap.html  volcano.html
src/app/: app.py  plot.html
src/lacerta/: base.py  correlations.py  heatmap_scatter.py
