[metadata]
name = lacerta
version = 0.1.0
author = Nils Persson
author_email = imperssonator@gmail.com
description = Interactive data viz for science and engineering
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/imperssonator/lacerta
project_urls =
    Bug Tracker = https://github.com/imperssonator/lacerta/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    bokeh>=3.0.3
    pandas>=1.5.3
    numpy>=1.24.2

[options.packages.find]
where = src